# CODESIGN

./: README.md  clear_icon_cache.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  staging.yml
ScenarioCode/: BasicDemo.tsx  ComplexDemo.tsx  DashboardDemo.tsx  LandingPageDemo.tsx  SCENARIO.md  ShapesDemo.tsx  TextDemo.tsx
coverage/: coverage-final.json  index.html
coverage/lib/ast/: codeModifier.ts.html  componentParser.ts.html  index.html
coverage/lib/utils/: index.html  tailwindParser.ts.html
coverage/stores/: canvasStore.ts.html  index.html  projectStore.ts.html
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/Canvas/: Canvas.css  Canvas.tsx  CanvasRenderer.css  CanvasRenderer.tsx  PropertyPanel.css  PropertyPanel.tsx
src/components/FileTree/: FileTree.css  FileTree.tsx  FileTreeNode.css  FileTreeNode.tsx
src/components/IDE/: IDE.css  IDE.tsx
src/components/MonacoEditor/: MonacoEditor.css  MonacoEditor.tsx
src/components/SelectFolder/: SelectFolder.css  SelectFolder.tsx
src/hooks/: useCanvasSync.ts  useCodeSync.ts
src/lib/ast/: codeModifier.ts  componentParser.ts  importResolver.ts
src/lib/fileSystem/: fileSystem.ts
src/lib/shapes/: shapeGenerator.ts
src/lib/utils/: tailwindParser.ts
src/stores/: canvasStore.ts  projectStore.ts
src/stores/__tests__/: canvasStore.test.ts  projectStore.test.ts
src/test/: setup.ts
(+13 files in other folders)
