[package]
name = "codesign-ide"
version = "0.1.0"
description = "UI ↔ Code 양방향 수정 IDE"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-read-dir", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

